--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-python-telegram-bot==20.8
-xrpl-py==2.4.0
+txtpython-telegram-bot==20.8
+xrpl-py==2.6.1
+httpx==0.24.1
+websockets==11.0.3
 python-dotenv==1.0.1
-requests
+requests==2.31.0
