--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-python-telegram-bot==21.5
+python-telegram-bot==20.8
 xrpl-py==4.3.1
+websockets==12.0
 python-dotenv==1.0.1
-requests==2.32.3
+requests==2.31.0
